generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-03/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isCountedByFlexibleArrayField(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:152:30: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
  152 |     if (const Expr *E = CBA->getCountedBy()) {
      |                              ^~~~~~~~~~~~
      |                              AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkLocation(clang::ento::SVal, bool, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:309:16: error: ‘const class clang::ento::MemRegion’ has no member named ‘getSuperRegion’; did you mean ‘getBaseRegion’?
  309 |     Cur = Cur->getSuperRegion();
      |                ^~~~~~~~~~~~~~
      |                getBaseRegion
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:114:18: warning: ‘static const clang::FieldDecl* {anonymous}::SAGenTestChecker::getMemberFieldDecl(const clang::Expr*)’ defined but not used [-Wunused-function]
  114 | const FieldDecl *SAGenTestChecker::getMemberFieldDecl(const Expr *E) {
      |                  ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
